--- a/src/AgilizaScrum.Core/AgilizaScrum.Core.csproj
+++ b/src/AgilizaScrum.Core/AgilizaScrum.Core.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Features\FeatureValueStore.cs" />
     <Compile Include="MultiTenancy\Tenant.cs" />
     <Compile Include="MultiTenancy\TenantManager.cs" />
+    <Compile Include="ProductBacklog\eState.cs" />
+    <Compile Include="ProductBacklog\IProductBackRepository.cs" />
+    <Compile Include="ProductBacklog\ProductBack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Authorization\Roles\Role.cs" />
     <Compile Include="Authorization\Roles\RoleManager.cs" />
@@ -202,6 +205,8 @@
     <Compile Include="Authorization\Users\User.cs" />
     <Compile Include="Authorization\Users\UserManager.cs" />
     <Compile Include="Authorization\Users\UserStore.cs" />
+    <Compile Include="SprintBacklog\ISprintRepository.cs" />
+    <Compile Include="SprintBacklog\Sprint.cs" />
     <Compile Include="Validation\ValidationHelper.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -236,6 +241,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Localization\Source\AgilizaScrum-vi.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
