create user story

--- a/src/AgilizaScrum.Core/AgilizaScrum.Core.csproj
+++ b/src/AgilizaScrum.Core/AgilizaScrum.Core.csproj
@@ -205,8 +205,12 @@
     <Compile Include="Authorization\Users\User.cs" />
     <Compile Include="Authorization\Users\UserManager.cs" />
     <Compile Include="Authorization\Users\UserStore.cs" />
+    <Compile Include="ReleaseBacklog\IReleaseBackRepository.cs" />
+    <Compile Include="ReleaseBacklog\ReleaseBack.cs" />
     <Compile Include="SprintBacklog\ISprintRepository.cs" />
     <Compile Include="SprintBacklog\Sprint.cs" />
+    <Compile Include="UserStories\IUserStoryRepository.cs" />
+    <Compile Include="UserStories\UserStory.cs" />
     <Compile Include="Validation\ValidationHelper.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -242,9 +246,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Localization\Source\AgilizaScrum-vi.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entities\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
