--- a/src/AgilizaScrum.EntityFramework/AgilizaScrum.EntityFramework.csproj
+++ b/src/AgilizaScrum.EntityFramework/AgilizaScrum.EntityFramework.csproj
@@ -201,6 +201,8 @@
   <ItemGroup>
     <Compile Include="EntityFramework\AgilizaScrumDbContext.cs" />
     <Compile Include="EntityFramework\Repositories\AgilizaScrumRepositoryBase.cs" />
+    <Compile Include="EntityFramework\Repositories\ReleaseBackRepository.cs" />
+    <Compile Include="EntityFramework\Repositories\SprintRepository.cs" />
     <Compile Include="EntityFramework\Repositories\ProductBackRepository.cs" />
     <Compile Include="Migrations\201707261347311_Initial_Migration.cs" />
     <Compile Include="Migrations\201707261347311_Initial_Migration.Designer.cs">
