--- a/src/AgilizaScrum.Web/AgilizaScrum.Web.csproj
+++ b/src/AgilizaScrum.Web/AgilizaScrum.Web.csproj
@@ -467,7 +467,7 @@
     <Content Include="App\Main\views\layout\topbar.js" />
     <Content Include="App\Main\views\products\createModal.js" />
     <Content Include="App\Main\views\products\editProduct.js" />
-    <Content Include="App\Main\views\products\userStory\createStoryModal.js" />
+    <Content Include="App\Main\views\products\userStory\editStoryModal.js" />
     <Content Include="App\Main\views\products\index.js" />
     <Content Include="App\Main\views\roles\editModal.js" />
     <Content Include="App\Main\views\roles\createModal.js" />
@@ -2347,6 +2347,7 @@
     <Content Include="Scripts\angular-cookies.js" />
     <Content Include="Scripts\angular-cookies.min.js" />
     <Content Include="Scripts\angular-csp.css" />
+    <Content Include="Scripts\angular-drag-and-drop-lists.min.js" />
     <Content Include="Scripts\angular-loader.js" />
     <Content Include="Scripts\angular-loader.min.js" />
     <Content Include="Scripts\angular-message-format.js" />
@@ -2872,7 +2873,7 @@
     <Content Include="App\Main\views\products\createModal.cshtml" />
     <Content Include="App\Main\views\products\editProduct.cshtml" />
     <Content Include="App\Main\views\products\index.cshtml" />
-    <Content Include="App\Main\views\products\userStory\createStoryModal.cshtml" />
+    <Content Include="App\Main\views\products\userStory\editStoryModal.cshtml" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
