corrigindo erros user story

--- a/src/AgilizaScrum.Web/Web.config
+++ b/src/AgilizaScrum.Web/Web.config
@@ -36,10 +36,8 @@
     <compilation debug="true" targetFramework="4.6.1">
     </compilation>
     <httpRuntime targetFramework="4.5.1" />
-    <customErrors mode="On" redirectMode="ResponseRewrite">
-     <error statusCode="404" redirect="~/404.aspx"/>
-     <error statusCode="500" redirect="~/500.aspx"/>
-   </customErrors>
+    <customErrors mode="RemoteOnly">
+    </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
