changing db and general leyaout

--- a/src/AgilizaScrum.Web/AgilizaScrum.Web.csproj
+++ b/src/AgilizaScrum.Web/AgilizaScrum.Web.csproj
@@ -472,6 +472,7 @@
     <Content Include="App\Main\views\release\createModal.js" />
     <Content Include="App\Main\views\release\editProduct.js" />
     <Content Include="App\Main\views\release\index.js" />
+    <Content Include="App\Main\views\release\releaseInfo\releaseInfo.js" />
     <Content Include="App\Main\views\roles\editModal.js" />
     <Content Include="App\Main\views\roles\createModal.js" />
     <Content Include="App\Main\views\roles\index.js" />
@@ -2880,6 +2881,7 @@
     <Content Include="App\Main\views\release\createModal.cshtml" />
     <Content Include="App\Main\views\release\editProduct.cshtml" />
     <Content Include="App\Main\views\release\index.cshtml" />
+    <Content Include="App\Main\views\release\releaseInfo\releaseInfo.cshtml" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
