--- a/src/AgilizaScrum.Core/AgilizaScrum.Core.csproj
+++ b/src/AgilizaScrum.Core/AgilizaScrum.Core.csproj
@@ -192,10 +192,11 @@
     <Compile Include="Configuration\AppSettingNames.cs" />
     <Compile Include="Configuration\AppSettingProvider.cs" />
     <Compile Include="Editions\EditionManager.cs" />
+    <Compile Include="enums\ePriority.cs" />
     <Compile Include="Features\FeatureValueStore.cs" />
     <Compile Include="MultiTenancy\Tenant.cs" />
     <Compile Include="MultiTenancy\TenantManager.cs" />
-    <Compile Include="ProductBacklog\eState.cs" />
+    <Compile Include="enums\eState.cs" />
     <Compile Include="ProductBacklog\IProductBackRepository.cs" />
     <Compile Include="ProductBacklog\ProductBack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
