--- a/src/AgilizaScrum.Web/packages.config
+++ b/src/AgilizaScrum.Web/packages.config
@@ -20,6 +20,7 @@
   <package id="Angular.UI.UI-Router" version="0.4.2" targetFramework="net452" />
   <package id="Angular.UI.Utils" version="0.2.3" targetFramework="net452" />
   <package id="angularjs" version="1.6.3" targetFramework="net452" />
+  <package id="angular-ui-select" version="0.19.8" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.6" targetFramework="net452" />
@@ -140,5 +141,6 @@
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XmlDocument" version="4.3.0" targetFramework="net461" />
   <package id="toastr" version="2.1.1" targetFramework="net452" />
+  <package id="ui-select" version="0.19.8" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
