--- a/src/AgilizaScrum.Web/AgilizaScrum.Web.csproj
+++ b/src/AgilizaScrum.Web/AgilizaScrum.Web.csproj
@@ -476,6 +476,8 @@
     <Content Include="App\Main\views\roles\editModal.js" />
     <Content Include="App\Main\views\roles\createModal.js" />
     <Content Include="App\Main\views\roles\index.js" />
+    <Content Include="App\Main\views\sprints\sprintplanning\startSprint.js" />
+    <Content Include="App\Main\views\sprints\sprintplanning\index.js" />
     <Content Include="App\Main\views\tenants\editModal.js" />
     <Content Include="App\Main\views\users\editModal.js" />
     <Content Include="App\Main\views\users\createModal.js" />
@@ -2884,6 +2886,8 @@
     <Content Include="App\Main\views\release\editProduct.cshtml" />
     <Content Include="App\Main\views\release\index.cshtml" />
     <Content Include="App\Main\views\release\releaseInfo\releaseInfo.cshtml" />
+    <Content Include="App\Main\views\sprints\sprintplanning\index.cshtml" />
+    <Content Include="App\Main\views\sprints\sprintplanning\startSprint.cshtml" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
@@ -3815,6 +3819,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App\Main\views\sprints\sprints\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
